--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>org.example</groupId>
     <artifactId>java-study-project</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>jsamuel-study-spring-boot-starter</module>
+        <module>test-spring-boot-starter</module>
+        <module>jsamuel-study-others</module>
+    </modules>
 
     <properties>
         <spring-starter-aop.version>2.5.6</spring-starter-aop.version>
