--- a/test-spring-boot-starter/pom.xml
+++ b/test-spring-boot-starter/pom.xml
@@ -7,31 +7,28 @@
     <artifactId>test-spring-boot-starter</artifactId>
 
     <parent>
+        <groupId>com.jsamuel.study</groupId>
         <artifactId>java-study-project</artifactId>
-        <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
+            <groupId>com.jsamuel.study</groupId>
+            <artifactId>study-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>2.3.11.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.3.11.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>jsamuel-study-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.3.11.RELEASE</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
