feat(jvm): add java jvm code, test class load order

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>test-spring-boot-starter</module>
         <module>study-others</module>
         <module>study-ioc</module>
+        <module>study-jvm</module>
     </modules>
 
     <properties>
