--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>study-others</module>
         <module>study-ioc</module>
         <module>study-jvm</module>
+        <module>study-reflection</module>
     </modules>
 
     <properties>
