feat(exception): init java exception code

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>study-jvm</module>
         <module>study-reflection</module>
         <module>study-generic</module>
+        <module>study-exception</module>
     </modules>
 
     <properties>
