feat(maven): add java maven code

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>log</module>
         <module>log-report</module>
         <module>study-functional-interface</module>
+        <module>study-maven</module>
     </modules>
 
     <properties>
