feat(session): add test session code

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>log-report</module>
         <module>study-functional-interface</module>
         <module>study-maven</module>
+        <module>test-session</module>
     </modules>
 
     <properties>
