feat(netty): add java netty code

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>study-maven</module>
         <module>test-session</module>
         <module>study-logback</module>
+        <module>study-netty</module>
     </modules>
 
     <properties>
